# xup_vitis_network_example

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  THIRD_PARTY_LIC.md  advanced.ini  connectivity.ini  connectivity_core.ini  connectivity_kernels.ini  post_sys_link.tcl
.github/ISSUE_TEMPLATE/: vnx-issue-template.md  vnx-xrt-issue-template.md
Basic_kernels/: Makefile
Basic_kernels/src/: krnl_counters.cpp  krnl_mm2s.cpp  krnl_s2mm.cpp
Benchmark_kernel/: Makefile  README.md  gen_switch_xo.tcl  gen_trafficgen.tcl  gen_xo.tcl  kernel.xml  package_kernel.tcl  package_switch.tcl  package_trafficgen.tcl  switch.xml  switch_bd.tcl  vitis_hls.tcl
Benchmark_kernel/src/: axi4lite.v  collector.cpp  collector_tb.cpp  segment_generator.v  segment_generator_tb_producer.v  switch_wrapper.v  traffic_generator.v
Benckmark_kernel/: .gitignore  Makefile  kernel.xml
Benckmark_kernel/src/: axi4lite.v  collector.cpp  segment_generator.v  segment_generator_tb_producer.v  traffic_generator.v
Ethernet/: .gitignore  Makefile  README.md  axi4lite.v  bd_cmac.tcl  cmac_top.v  duplicate_patch.sh  gen_xo.tcl  package_cmac.tcl  package_kernel.tcl  platform.tcl  post_sys_link.tcl  template.xml  template_top.v
Ethernet/cmac/: .gitignore  LICENSE.md  Makefile  README.md  patch_cmac_files.sh
Ethernet/cmac/constraints/: alveou200_qsfp0.xdc  alveou200_qsfp1.xdc  alveou250_qsfp0.xdc  alveou250_qsfp1.xdc  alveou280_qsfp0.xdc  alveou280_qsfp1.xdc  alveou50_qsfp0.xdc  cmac_false_path.xdc  cmac_synq_false_path.xdc  vcu118_qsfp0.xdc  vcu118_qsfp1.xdc
Ethernet/cmac/scripts/: cmac_sync.tcl  cmac_uplus_wrapper.tcl
Ethernet/cmac/scripts/xilinx_ips/: axi_fifo.tcl  cmac_uplus.tcl  fifo_cdc.tcl  lbus_fifo.tcl
Ethernet/cmac/src/cmac/: cmac_axi2lbus.sv  cmac_connector.sv  cmac_connector_wrapper.sv  cmac_lbus2axi.v  cmac_lbus_aligned_2_axi.sv  cmac_lbus_aligner.sv  cmac_uplus_wrapper.sv
Ethernet/cmac/src/cmac_sync/: cmac_0_axi4_lite_user_if.v  cmac_sync.sv  cmac_sync_wrapper.sv  rx_sync.v  tx_sync.v
Ethernet/cmac/src/common/: cmac_0_cdc.v  types.svh
Ethernet/src/: cmac_0_axi4_lite_user_if.v  cmac_sync.v  cmac_synq_false_path.xdc  frame_padding.v  rx_sync.v  template_top.v
Ethernet/src/sysc/: cmac.cpp  cmac.h  cmac_0.h  cmac_1.h
HostC++/: CMakeLists.txt  README.md
HostC++/exec/: alveo_rx.cpp  alveo_tx.cpp
HostC++/include/: alveo_vnx_cmac.h  alveo_vnx_configs.h  alveo_vnx_krnl_mm2s.h  alveo_vnx_krnl_s2mm.h  alveo_vnx_link.h  alveo_vnx_nl.h  fpga_device.h  fpga_ip.h  fpga_kernel.h
HostC++/src/: alveo_vnx_cmac.cpp  alveo_vnx_krnl_mm2s.cpp  alveo_vnx_krnl_s2mm.cpp  alveo_vnx_link.cpp  alveo_vnx_nl.cpp  fpga_device.cpp  fpga_ip.cpp  fpga_kernel.cpp
Kernels/: .gitignore  Makefile
Kernels/src/: krnl_mm2s.cpp  krnl_s2mm.cpp
NetLayers/: .gitignore  Makefile  README.md  bd_network_layer.tcl  kernel.xml  package_kernel.tcl  package_netlayer.tcl  platform.tcl  template.xml
NetLayers/src/: 6to3_reducer.vhd  axi4stream_constant.v  axi4stream_sinker.v  bandwidth_reg.v  bandwith_reg.v  counter_64_7_v3.vhd  interface_settings.v  network_layer.v  networklayer.v  performance_debug_reg.v
Notebooks/: README.md  basicExample_NIC_FPGA.ipynb  dask_pynq.py  simpleUDP_networkExample.ipynb  vnx-basic-image-transfer.ipynb  vnx-basic.ipynb  vnx-benchmark-rtt-switch.ipynb  vnx-benchmark-rtt.ipynb  vnx-benchmark-throughput-switch.ipynb  vnx-benchmark-throughput.ipynb  vnx_utils.py
config_files/: connectivity_basic_if0.ini  connectivity_basic_if1.ini  connectivity_basic_if3.ini  connectivity_benchmark_if0.ini  connectivity_benchmark_if1.ini  connectivity_benchmark_if3.ini
host_xrt/: CMakeLists.txt  README.md
host_xrt/exec/: alveo_rx.cpp  alveo_tx.cpp
host_xrt/include/: alveo_vnx_cmac.h  alveo_vnx_configs.h  alveo_vnx_krnl_mm2s.h  alveo_vnx_krnl_s2mm.h  alveo_vnx_link.h  alveo_vnx_nl.h  fpga_device.h  fpga_ip.h  fpga_kernel.h  xrt_platform.h
host_xrt/src/: alveo_vnx_cmac.cpp  alveo_vnx_krnl_mm2s.cpp  alveo_vnx_krnl_s2mm.cpp  alveo_vnx_link.cpp  alveo_vnx_nl.cpp  fpga_device.cpp  fpga_ip.cpp  fpga_kernel.cpp  xrt_platform.cpp
kernels/: Makefile
kernels/src/: krnl_s2mm.cpp
xrt_host_api/: .gitignore  CMakeLists.txt  README.md
xrt_host_api/examples/basic_hwemu/: CMakeLists.txt  README.md  basic_hwemu.cpp  hwemu_switch.py
xrt_host_api/examples/ping_fpga/: .gitignore  CMakeLists.txt  README.md  ping_fpga.cpp
xrt_host_api/examples/test_link/: .gitignore  CMakeLists.txt  README.md  test_link.cpp
xrt_host_api/include/: networklayer.hpp
xrt_host_api/include/vnx/: cmac.hpp  mac.hpp  networklayer.hpp
xrt_host_api/src/: cmac.cpp  mac.cpp  networklayer.cpp
